deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-manager
  labels:
    app.kubernetes.io/part-of: k8s-manager
